tests/baselines/reference/es5ExportEquals(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
es5ExportEquals.ts(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es5ExportEquals.ts (1 errors) ====
    export function f() { }
    
    export = f;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    